# c-rule-enforcer

./: .gitignore  pyproject.toml
src/: c_rule_enforcer.py  explorer.py
tests/: test_c_rule_enforcer.py
